--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         
         <div class="row">
             <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">{{w}}
-                <div class="form-group form-group-lg"><input typing typing-word="typingWord" ng-trim="false" type="text" name="pwd" ng-model="text" class="form-control" placeholder="text"></div>
+                <div class="form-group form-group-lg"><input predictive-typing typing-word="typingWord" ng-trim="false" type="text" name="pwd" ng-model="text" class="form-control" placeholder="text"></div>
             </div>
         </div>
     </main>
