--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
         <div class="row">
             <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                 <div class="jumbotron word-container">
-                    <span ng-click="select(word)" class="word" ng-repeat="word in words | filter:typingWord" ng-class="{'matched-word' : typingWord==word}">{{word}}</span>   
+                    <span ng-click="select(word)" ng-if="$index<limit" class="word" ng-repeat="word in words | filter:typingWord" ng-class="{'matched-word' : typingWord==word}">{{word}}</span>   
                 </div>
             </div>
         </div>
         
         <div class="row">
-            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">{{w}}
+            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                 <div class="form-group form-group-lg"><input predictive-typing typing-word="typingWord" ng-trim="false" type="text" name="pwd" ng-model="text" class="form-control" placeholder="text"></div>
             </div>
         </div>
